[package]
name = "perjrec"
version = "0.1.0"
edition = "2024"

[dependencies]
console = "0.16.3"
crossterm = "0.28"
dialoguer = "0.12.0"
indicatif = "0.18.4"
ratatui = "0.29"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.149"
terminal = "0.2.1"
tokio = { version = "1.52", features = ["full"] }


[alias]
kcrun = "run"
